force-app/main/default/objects/Formula__c.object
<CustomObject>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Debug__c</fullName>
        <label>Debug</label>
        <length>120000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ElaborationError__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Elaboration Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Origin</label>
        <picklist>
            <picklistValues>
                <fullName>App</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ExtUser</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ReturnType__c</fullName>
        <label>Return type</label>
        <picklist>
            <picklistValues>
                <fullName>BOOLEAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DATETIME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NUMBER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STRING</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SObjectType__c</fullName>
        <label>SObject Type</label>
        <length>45</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scale__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Scale</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SiteSuggestions__c</fullName>
        <label>Site Suggestions</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Formula</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Origin__c</columns>
        <columns>Name__c</columns>
        <columns>ReturnType__c</columns>
        <columns>SObjectType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>F{0000000000}</displayFormat>
        <label>Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Formulas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>